# open-nostr

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  SCSS.md  Start.md  TODO.md  i.html  index.html  package-lock.json  package.json  run-indexeddb_test.sh  start.sh
.github/workflows/: rust.yml
assets/: index.css  main.css  main.dev.css  main.min.css
assets/style/: common.css  components.css  layout-left.css  layout-main.css  layout-right.css  main.css  var.css
custom_db/: Cargo.toml
examples/: Cargo.toml  client.rs  event-is-reply.rs  get-events-of.rs  metadata.rs  multiple-subscriptions.rs  register.rs  single-websocket-mutiple-sub.rs  subscriptions.rs
examples/webapp/: Cargo.toml
examples/webapp/src/: app.rs
src/: components.rs  lib.rs  main.rs  router.rs  state.rs  testhelper.rs  utils.rs  views.rs
src/account/: mod.rs
src/components/: author.rs  avatar.rs  button.rs  checkbox.rs  custom_sub.rs  dropdown.rs  dtpicker.rs  icons.rs  input_card.rs  input_kv.rs  mention.rs  message.rs  mod.rs  modal_manager.rs  note.rs  note_edit.rs  notification.rs  outside.rs  post.rs  quote.rs  relays_manage.rs  switch.rs
src/components/notification/: mod.rs  notification_content.rs  notification_reply.rs
src/init/: mod.rs
src/nostr/: client.rs  client_manager.rs  custom-client.rs  custom_manager.rs  db.rs  fetch.rs  metadata.rs  mod.rs  multiclient.rs  note.rs  publish.rs  reademe.md  register.rs  utils.rs
src/router/: layout.rs  mod.rs
src/state/: client.rs  mod.rs  subscription.rs  user.rs
src/storage/: README.md  events.rs  mod.rs
src/store/: error.rs  mod.rs  subscription.rs  user.rs
src/utils/: contants.rs  format.rs  js.rs  mod.rs  random.rs
src/views/: bookmark.rs  channel.rs  custom_sub copy.rs  custom_sub.rs  group.rs  home.rs  message.rs  mod.rs  new_subscription.rs  note.rs  profile.rs  relay.rs  search.rs  settings.rs  subscription.rs  test.rs  topic.rs
src/views/custom_sub/: account.rs  add_filter.rs  cus_events.rs  cus_tags.rs  event.rs  hashtag.rs  input.rs  kind.rs  limit.rs  mod.rs  more_action.rs  relays.rs  tag.rs
src/views/note_detail/: mod.rs
src/views/note_list/: actions.rs  detail_modal.rs  mod.rs  new_note_msg.rs  note.rs  note_content.rs  note_wrapper.rs  quote.rs  reaction.rs  readme.md  reply.rs  repost.rs
src/views/note_list/custom_sub/: account.rs  add_filter.rs  event.rs  hashtag.rs  input.rs  kind.rs  limit.rs  mod.rs  relays.rs  tag.rs
styles/: app.scss  author.scss  button.scss  common.scss  components.scss  custom-sub.scss  layout-left.scss  layout-main.scss  layout-right.scss  main.scss  navigation-bar.scss  notification.scss  page.scss  reset.scss
styles/mixins/: mixins.scss  variable.scss
