workspace = { members = ["custom_db"] }
[package]
name = "capybastr"
version = "0.1.0"
authors = ["ahriknow <ahriknow@ahriknow.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.30"
nostr-indexeddb = "0.30"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dioxus = { version = "0.5", features = ["fullstack", "router"] }
manganis = "0.2.2"
regex = "1.10"
rand = "0.8"
# Debug
log = "0.4.19"
dioxus-logger = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indextree = "4.6.1"
custom-db = { path = "./custom_db" }
indexed_db_futures = "0.4.1"
web-sys = "0.3.69"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
futures = "0.3"
wasm-bindgen-futures = "0.4"
async-std = "1.8"
[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
