workspace = { members = ["custom_db"] }
[package]
name = "capybastr"
version = "0.1.0"
authors = ["ahriknow <ahriknow@ahriknow.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { version = "0.32", default-features = false, features = [
    "indexeddb",
    "webln",
    "nip04",
    "nip05",
    "nip06",
    "nip11",
    "nip44",
    "nip46",
    "nip47",
    "nip49",
    "nip57",
    "nip59",
] }
dashmap = "5.5.3"
nostr-indexeddb = "0.32"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dioxus = { version = "0.5.1", features = ["web", "router"] }
manganis = "0.2.2"
regex = "1.10"
rand = "0.8"
# Debug
log = "0.4.19"
dioxus-logger = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indextree = "4.6.1"
custom-db = { path = "./custom_db" }
indexed_db_futures = "0.4.1"
web-sys = "0.3.69"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
futures = "0.3"
wasm-bindgen-futures = "0.4"
async-std = "1.8"
lazy_static = "1.4.0"
thiserror = "1.0.24"
wasm-bindgen-test = "0.3"
js-sys = "0.3.69"
cached = "0.51.3"
urlencoding = "*"
tokio = { version = "1", features = ["sync"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tokio-stream = "0.1"
uuid = "1.5.0"
chacha20 = "0.9.1"
aes-gcm = "0.10.3"

[features]
default = []
# server = ["dioxus/axum"]
web = ["dioxus/web"]
